fixing bug related to difficulty affecting how many color and visibility array elements are generated for squares

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .App {
   text-align: center;
+  background-color: #f2f4f8;
 }
